[#16577] Add jdk.incubator.vector in server scripts